414/simplejava.java
/* Generated By:JavaCC: Do not edit this line. simplejava.java */
public class simplejava implements simplejavaConstants {

/*
1. Array []s are off for all the tests test02, test06, test09, test11 and possibly more
2. y = y + 1 doesn't even get output  test04
3. test08 seriously bad
4. test09 missing a bunch of if statements
5. test10 missing 2 for loops and a couple of function calls
DONE
*/
  static final public ASTProgram program() throws ParseException {
  Token t;
  ASTClasses classes = new ASTClasses();
  ASTClass class_v;
  ASTFunctionDefinitions functionDefinitions = new ASTFunctionDefinitions();
  ASTFunctionDefinition functionDefinition;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      class_v = classDef();
      classes.addElement(class_v);
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      functionDefinition = functionDef();
      functionDefinitions.addElement(functionDefinition);
    }
    t = jj_consume_token(0);
    {if (true) return new ASTProgram(classes, functionDefinitions, t.beginLine);}
    throw new Error("Missing return statement in function");
  }

/*
DONE
*/
  static final public ASTClass classDef() throws ParseException {
  Token t;
  ASTInstanceVariableDefs instanceVariableDefs = new ASTInstanceVariableDefs();
  ASTInstanceVariableDef instanceVariableDef;
    jj_consume_token(CLASS);
    t = jj_consume_token(ID);
    jj_consume_token(LB);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      instanceVariableDef = varDecl();
      instanceVariableDefs.addElement(instanceVariableDef);
    }
    jj_consume_token(RB);
    {if (true) return new ASTClass(t.image, instanceVariableDefs, t.beginLine);}
    throw new Error("Missing return statement in function");
  }

/*
DONE
*/
  static final public ASTInstanceVariableDef varDecl() throws ParseException {
  Token type;
  Token name;
  int dimension = 0;
  ASTInstanceVariableDef instanceVariableDef;
  ASTExpression e;
    type = jj_consume_token(ID);
    name = jj_consume_token(ID);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBKT:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      jj_consume_token(LBKT);
      jj_consume_token(RBKT);
                                                  dimension++;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GETS:
      jj_consume_token(GETS);
      e = expression();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMI:
      jj_consume_token(SEMI);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    if(dimension != 0)
    {
      instanceVariableDef = new ASTInstanceVariableDef(type.image, name.image, dimension, type.beginLine);
      dimension = 0;
    }
    else
    {
      instanceVariableDef = new ASTInstanceVariableDef(type.image, name.image, type.beginLine);
    }
    {if (true) return instanceVariableDef;}
    throw new Error("Missing return statement in function");
  }

/*
DONE
*/
  static final public ASTFunctionDefinition functionDef() throws ParseException {
  Token type;
  Token name;
  ASTFormals formals_v = new ASTFormals();
  ASTStatements statements_v = new ASTStatements();
  ASTStatement statement_v;
  ASTPrototype prototype;
  ASTFunction function;
    type = jj_consume_token(ID);
    name = jj_consume_token(ID);
    jj_consume_token(LP);
      formals_v = formals();
    jj_consume_token(RP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMI:
      jj_consume_token(SEMI);
      prototype = new ASTPrototype(type.image, name.image, formals_v, type.beginLine);
      {if (true) return prototype;}
      break;
    case LB:
      jj_consume_token(LB);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DO:
        case FOR:
        case IF:
        case WHILE:
        case RETURN:
        case LB:
        case SEMI:
        case ID:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        statement_v = statement();
                        statements_v.addElement(statement_v);
      }
      jj_consume_token(RB);
    function = new ASTFunction(type.image, name.image, formals_v, statements_v, type.beginLine);
    {if (true) return function;}
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/*
DONE
*/
  static final public ASTFormals formals() throws ParseException {
 ASTFormals formals_v = new ASTFormals();
 ASTFormal formal_v;
 int dimension = 0;
 Token type, name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      type = jj_consume_token(ID);
      name = jj_consume_token(ID);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBKT:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_6;
        }
        jj_consume_token(LBKT);
        jj_consume_token(RBKT);
                                                    dimension++;
      }
                if(dimension != 0){
                        formal_v = new ASTFormal(type.image, name.image, dimension, type.beginLine);
                }
                else{
                        formal_v = new ASTFormal(type.image, name.image, type.beginLine);
                }
                formals_v.addElement(formal_v);
                dimension=0;
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_7;
        }
        jj_consume_token(COMMA);
        type = jj_consume_token(ID);
        name = jj_consume_token(ID);
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBKT:
            ;
            break;
          default:
            jj_la1[10] = jj_gen;
            break label_8;
          }
          jj_consume_token(LBKT);
          jj_consume_token(RBKT);
                                                               dimension++;
        }
                        if(dimension != 0){
                                formal_v = new ASTFormal(type.image, name.image, dimension, type.beginLine);
                        }
                        else{
                                formal_v = new ASTFormal(type.image, name.image, type.beginLine);
                        }
                        formals_v.addElement(formal_v);
                        dimension=0;
      }
          {if (true) return formals_v;}
      break;
    default:
      jj_la1[11] = jj_gen;

  {if (true) return formals_v;}
    }
    throw new Error("Missing return statement in function");
  }

/*
DONE
*/
  static final public ASTExpression expression() throws ParseException {
  ASTExpression result;
  ASTExpression rhs;
  Token t;
    result = expression2();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_9;
      }
      t = jj_consume_token(OR);
      rhs = expression2();
      result = new ASTOperatorExpression(result, rhs, t.image, t.beginLine);
    }
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

/*
DONE
*/
  static final public ASTExpression expression2() throws ParseException {
  ASTExpression result;
  ASTExpression rhs;
  Token t;
    result = expression3();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_10;
      }
      t = jj_consume_token(AND);
      rhs = expression3();
      result = new ASTOperatorExpression(result, rhs, t.image, t.beginLine);
    }
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

/*
DONE
*/
  static final public ASTExpression expression3() throws ParseException {
  ASTExpression result;
  ASTExpression rhs;
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      t = jj_consume_token(NOT);
      result = expression3();
      result = new ASTUnaryOperatorExpression(result, ASTUnaryOperatorExpression.NOT, t.beginLine);
      {if (true) return result;}
      break;
    case FALSE:
    case TRUE:
    case NEW:
    case MINUS:
    case LP:
    case ID:
    case INTEGER_LITERAL:
      result = expression4();
      {if (true) return result;}
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/*
DONE
*/
  static final public ASTExpression expression4() throws ParseException {
  ASTExpression result;
  ASTExpression rhs;
  Token t;
    result = expression5();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
      case NOTEQUAL:
      case LESS:
      case GREAT:
      case LEQUAL:
      case GEQUAL:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
        t = jj_consume_token(EQUAL);
        break;
      case NOTEQUAL:
        t = jj_consume_token(NOTEQUAL);
        break;
      case LEQUAL:
        t = jj_consume_token(LEQUAL);
        break;
      case GEQUAL:
        t = jj_consume_token(GEQUAL);
        break;
      case LESS:
        t = jj_consume_token(LESS);
        break;
      case GREAT:
        t = jj_consume_token(GREAT);
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      rhs = expression5();
      result = new ASTOperatorExpression(result, rhs, t.image, t.beginLine);
    }
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

/*
DONE
*/
  static final public ASTExpression expression5() throws ParseException {
  ASTExpression result;
  Token t;
  ASTExpression rhs;
    result = expression6();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        t = jj_consume_token(PLUS);
        break;
      case MINUS:
        t = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      rhs = expression6();
      result = new ASTOperatorExpression(result, rhs, t.image, t.beginLine);
    }
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

/*
DONE
*/
  static final public ASTExpression expression6() throws ParseException {
  ASTExpression result;
  Token t;
  ASTExpression rhs;
    result = factor();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULT:
      case DIVIDE:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_13;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULT:
        t = jj_consume_token(MULT);
        break;
      case DIVIDE:
        t = jj_consume_token(DIVIDE);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      rhs = factor();
      result = new ASTOperatorExpression(result, rhs, t.image, t.beginLine);
    }
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

/*
DONE
*/
  static final public ASTExpression factor() throws ParseException {
  ASTExpression e;
  ASTExpression value;
  Token t;
  int dimension = 0;
  Token name;
  ASTVariable var;
  ASTFunctionCallExpression fc;
  ASTExpression newExp;
  ASTNewClassExpression ce;
  ASTNewClassExpression ae;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      t = jj_consume_token(INTEGER_LITERAL);
    {if (true) return new ASTIntegerLiteral(Integer.parseInt(t.image), t.beginLine);}
      break;
    case MINUS:
      t = jj_consume_token(MINUS);
      value = factor();
    {if (true) return new ASTOperatorExpression(new ASTIntegerLiteral(0, t.beginLine), value, ASTOperatorExpression.MINUS, t.beginLine);}
      break;
    case LP:
      t = jj_consume_token(LP);
      e = expression();
      jj_consume_token(RP);
    {if (true) return e;}
      break;
    case TRUE:
      t = jj_consume_token(TRUE);
    {if (true) return new ASTBooleanLiteral(true, t.beginLine);}
      break;
    case FALSE:
      t = jj_consume_token(FALSE);
    {if (true) return new ASTBooleanLiteral(false, t.beginLine);}
      break;
    case ID:
      t = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LP:
    fc = new ASTFunctionCallExpression(t.image, t.beginLine);
        jj_consume_token(LP);
        fc = actuals(fc);
        jj_consume_token(RP);
      {if (true) return fc;}
        break;
      default:
        jj_la1[23] = jj_gen;
                var = new ASTBaseVariable(t.image, t.beginLine);
        label_14:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case DOT:
          case LBKT:
            ;
            break;
          default:
            jj_la1[21] = jj_gen;
            break label_14;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case DOT:
            jj_consume_token(DOT);
            name = jj_consume_token(ID);
                var = new ASTClassVariable(var, name.image, t.beginLine);
            break;
          case LBKT:
            jj_consume_token(LBKT);
            e = expression();
            jj_consume_token(RBKT);
        var = new ASTArrayVariable(var, e, t.beginLine);
            break;
          default:
            jj_la1[22] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      {if (true) return new ASTVariableExpression(var, t.beginLine);}
      }
      break;
    case NEW:
      jj_consume_token(NEW);
      t = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LP:
        jj_consume_token(LP);
        jj_consume_token(RP);
              newExp = new ASTNewClassExpression(t.image, t.beginLine);
        break;
      case LBKT:
        jj_consume_token(LBKT);
        e = expression();
        jj_consume_token(RBKT);
        label_15:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBKT:
            ;
            break;
          default:
            jj_la1[24] = jj_gen;
            break label_15;
          }
          jj_consume_token(LBKT);
          jj_consume_token(RBKT);
                dimension++;
        }
                      if(dimension != 0)
                      {
                        newExp = new ASTNewArrayExpression(t.image, e, dimension, t.beginLine);
                        dimension = 0;
                      }
                      else
                      {
                        newExp = new ASTNewArrayExpression(t.image, e, t.beginLine);
                      }
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
            {if (true) return newExp;}
      break;
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/*
I think this is messed up
*/
  static final public ASTStatement subset() throws ParseException {
  ASTStatement stmt;
  Token t;
  ASTExpression retExp = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RETURN:
      t = jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FALSE:
      case TRUE:
      case NEW:
      case MINUS:
      case LP:
      case NOT:
      case ID:
      case INTEGER_LITERAL:
        retExp = expression();
        break;
      default:
        jj_la1[27] = jj_gen;
        ;
      }
  {if (true) return new ASTReturnStatement(retExp, t.beginLine);}
      break;
    case ID:
      t = jj_consume_token(ID);
      stmt = statementPrime(t);
  {if (true) return stmt;}
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
